// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the dangerfile gitDSL should include \`added\` text content of the file 1`] = `
"+import About from '../components/gene/about'
+    this.state = { selectedTabIndex: 1 }
+      case TABS.ABOUT: return <About gene={this.props.gene} />
+        \${About.getFragment('gene')}"
`;

exports[`the dangerfile gitDSL should include \`after\` text content of the file 1`] = `
"### 1.1.0-beta.3

- Fix missing image asset issue - alloy
- [dev] Updates Flow to 0.32 - orta
- [dev] Updates React to 0.34 - orta
- [dev] Turns on \\"keychain sharing\\" to fix a keychain bug in sim - orta
- GeneVC now shows about information, and trending artists - orta

### 1.1.0-beta.2

- Adds an initial Gene view - orta
- Animate inverted button state change - alloy
- Do not show follow button on artist view until current status is retrieved - alloy
- Optimistically change state of follow button on artist view - alloy
- Bundle assets into a dir that can be included in release builds - alloy
- Remove typings from the npm \`package.json\` as the recommendation is a global install - orta
- Make follow artist button in artist rail work and replace with a new suggestion based on that artist - alloy
- Home now asks for maximum of 99 artwork rails - sarah
- Added pull-to-refresh functionality to home view - sarah
- Added a default minimum height for all rails - maxim
- Added a pretty load failure view and allow for retrying - alloy
- Added a section header for all Home rails - sarah
- Added an Artworks rail to Home view - sarah
- Added Danger, a CHANGELOG and some tests - orta

### 1.0.3

[Original release]
"
`;

exports[`the dangerfile gitDSL should include \`before\` text content of the file 1`] = `
"### 1.1.0-beta.3

- Fix missing image asset issue - alloy
- [dev] Updates Flow to 0.32 - orta
- [dev] Updates React to 0.34 - orta
- [dev] Turns on \\"keychain sharing\\" to fix a keychain bug in sim - orta

### 1.1.0-beta.2

- Adds an initial Gene view - orta
- Animate inverted button state change - alloy
- Do not show follow button on artist view until current status is retrieved - alloy
- Optimistically change state of follow button on artist view - alloy
- Bundle assets into a dir that can be included in release builds - alloy
- Remove typings from the npm \`package.json\` as the recommendation is a global install - orta
- Make follow artist button in artist rail work and replace with a new suggestion based on that artist - alloy
- Home now asks for maximum of 99 artwork rails - sarah
- Added pull-to-refresh functionality to home view - sarah
- Added a default minimum height for all rails - maxim
- Added a pretty load failure view and allow for retrying - alloy
- Added a section header for all Home rails - sarah
- Added an Artworks rail to Home view - sarah
- Added Danger, a CHANGELOG and some tests - orta

### 1.0.3

[Original release]
"
`;

exports[`the dangerfile gitDSL should include \`removed\` text content of the file 1`] = `
"-
-    this.state = { selectedTabIndex: 0 }
-      case TABS.ABOUT: return <Text/>"
`;

exports[`the dangerfile gitDSL shows the diff for a specific file 1`] = `
" 
 import Events from '../native_modules/events'
 
+import About from '../components/gene/about'
 import Header from '../components/gene/header'
 
 import TabView from '../components/tab_view'
 import type TabSelectionEvent from '../components/events'
 
-
 const TABS = {
   WORKS: 'WORKS',
   ABOUT: 'ABOUT',
   };
 
   componentWillMount() {
-    this.state = { selectedTabIndex: 0 }
+    this.state = { selectedTabIndex: 1 }
   }
 
   tabSelectionDidChange = (event: TabSelectionEvent) => {
     switch (this.selectedTabTitle()) {
       // case TABS.ABOUT: return <About gene={this.props.gene} />
       // case TABS.WORKS: return <Artworks gene={this.props.gene} />
-      case TABS.ABOUT: return <Text/>
+      case TABS.ABOUT: return <About gene={this.props.gene} />
       case TABS.WORKS: return <Text/>
     }
   }
         _id
         id
         \${Header.getFragment('gene')}
+        \${About.getFragment('gene')}
       }
     \`,
   }"
`;
